--- a/package.json
+++ b/package.json
@@ -44,7 +44,8 @@
     "tslint": "5.20.0",
     "tslint-config-airbnb": "5.11.2",
     "tslint-config-prettier": "1.18.0",
-    "typescript": "3.6.3"
+    "typescript": "3.6.3",
+    "yargs": "14.0.0"
   },
   "keywords": [
     "data",
