--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "make-dir": "3.0.0",
     "ora": "3.4.0",
     "prettier": "1.18.2",
+    "proload": "1.0.0-alpha.3",
     "ramda": "0.26.1",
     "rimraf": "3.0.0",
     "rollup": "1.21.4",
