--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   "devDependencies": {
     "@types/jest": "24.0.18",
     "axios": "0.19.0",
+    "copyfiles": "2.1.1",
     "coveralls": "3.0.6",
     "download": "7.1.0",
     "jest": "24.9.0",
