npm: force manual typings declaration style in build script

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c",
+    "build": "rollup -c && copyfiles -f ./src/index.d.ts ./dist",
     "ci:generate:release_notes": "node ./scripts/ci/generate_release_notes.js",
     "data:generate": "node ./scripts/data/generate.js",
     "test": "yarn test:lint && yarn test:unit",
