--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
   },
   "devDependencies": {
     "@types/jest": "24.9.0",
+    "archiver": "3.1.1",
     "axios": "0.19.0",
     "copyfiles": "2.1.1",
     "coveralls": "3.0.9",
@@ -35,8 +36,6 @@
     "rollup-plugin-cleaner": "1.0.0",
     "rollup-plugin-commonjs": "10.1.0",
     "rollup-plugin-json": "4.0.0",
-    "rollup-plugin-node-builtins": "2.1.2",
-    "rollup-plugin-node-globals": "1.4.0",
     "rollup-plugin-node-resolve": "5.2.0",
     "rollup-plugin-typescript2": "0.24.3",
     "rorre": "1.2.0",
