--- a/.github/renovate.json
+++ b/.github/renovate.json
@@ -1,13 +1,4 @@
 {
   "enabled": true,
-  "extends": [
-    "github>SocialGouv/renovate-config",
-    ":automergeAll",
-    "docker:disableMajor",
-    "group:allNonMajor",
-    "schedule:earlyMondays"
-  ],
-  "node": {
-    "supportPolicy": ["lts_latest"]
-  }
+  "extends": ["github>ivangabriele/renovate-config"]
 }
