ci(travis): limit branches building to master and develop ones

--- a/.travis.yml
+++ b/.travis.yml
@@ -54,6 +54,12 @@ jobs:
           repo: ivangabriele/dumdum
           tags: true
 
+# Limit branches builds to "master" & "develop" ones:
+branches:
+  only:
+    - develop
+    - master
+
 notifications:
   email:
     on_failure: change
