--- a/package.json
+++ b/package.json
@@ -6,26 +6,19 @@
   "main": "./dist/index.js",
   "types": "./dist/index.d.ts",
   "scripts": {
-    "build": "rollup -c && copyfiles -f ./src/index.d.ts ./dist",
-    "build:release": "yarn build && node ./scripts/ci/build_release.js",
-    "ci:generate:release_notes": "node ./scripts/ci/generate_release_notes.js",
+    "build": "rollup -c && cp ./src/index.d.ts ./dist/index.d.ts",
     "data:generate": "node ./scripts/data/generate.js",
     "test": "yarn test:lint && yarn test:unit",
     "test:lint": "tslint -p ./tsconfig.json",
     "test:unit": "jest --coverage",
-    "test:watch": "yarn test:unit --watch",
-    "preversion": "yarn test",
-    "postversion": "git push origin HEAD && git push --tags"
+    "test:watch": "yarn test:unit --watch"
   },
   "devDependencies": {
     "@types/jest": "26.0.22",
-    "archiver": "5.3.0",
     "axios": "0.21.1",
-    "copyfiles": "2.4.1",
-    "coveralls": "3.1.0",
+    "codecov": "3.8.3",
     "download": "8.0.0",
     "jest": "26.6.3",
-    "keep-a-changelog": "0.10.4",
     "make-dir": "3.1.0",
     "ora": "5.4.0",
     "prettier": "2.2.1",
